# bdk-newport

./: .gitignore  CN80XX.asim  CN81XX.asim  CN83XX.asim  CN88XX.asim  CN93XX.asim  CN96XX.asim  CN98XX.asim  CNF95XX.asim  LOKI.asim  Makefile  bdk.vpj  bdk.vpw  license.txt  version.mk
apps/: Makefile
boards/: Makefile  asim-cn81xx.dts  asim-cn83xx.dts  asim-cn88xx.dts  asim-cn93xx.dts  asim-cn96xx-a0.c  asim-cn96xx-a0.dts  asim-cn96xx-c0.dts  asim-cn98xx.dts  asim-cnf95xx-a0.dts  asim-cnf95xx-b0.dts  asim-loki.dts  cn3380_250sv.c  cn3380_250sv.dts  cn3380_250sv_common.dtsi  cn3380_250sv_v3.c  cn3380_250sv_v3.dts  cn8370-crb.c  cn8370-crb.dts  cn96xx-crb-r2.dts  cn96xx-crb.c  cn96xx-crb.dts  cn96xx-crb_common.dtsi  cn96xx-fio.dts  crb-1s.dts  crb-2s-common.dtsi  crb-2s-evt2.dts  crb-2s-evt3.dts  crb-2s.dts  ddr3-cn8xxx.dtsi  ddr3-common.dtsi  ddr4-cn8xxx.dtsi  ddr4-cn9xxx.dtsi  ebb8004.dts  ebb8104.dts  ebb8304.dts  ebb8604.dts  ebb8800-common.dtsi  ebb8800.dts  ebb8804-common.dtsi  (+43 more)
csr-tool/: Makefile  Makefile.csr-cluster  chip_list.py  csr-tool.py  csr.css  csr_data.py  csr_utils.py  enum_handler.py  output_c_database.py  output_c_header.py  output_c_header_uboot.py  output_html.py  reg_handler.py  sorttable.js  struct_handler.py  yaml_loader.py  yaml_utils.py
docs/: Doxyfile  Makefile  bdk-bringup-guide.txt  bdk-device-descr.txt  bdk-getting-started.txt  bdk-internals.txt  bdk-release-notes.txt  bdk-trusted-boot.txt  bdk.txt  cavium-license-type5.txt
libbdk-arch/: bdk-arch.h  bdk-asm.h  bdk-csr-db.c  bdk-csr.c  bdk-csr.h  bdk-csrs-ap.h  bdk-csrs-apbr.h  bdk-csrs-apbrom_horizontal.h  bdk-csrs-apbrom_mdab.h  bdk-csrs-apbrom_vertical.h  (+136 more)
libphy/marvell-88x5113/serdes/: README  configure  configure.ac
libphy/marvell-88x5113/serdes/autom4te.cache/: output.1  requests  traces.0  traces.1
libphy/marvell-88x5113/serdes/src/: Makefile.am  Makefile.example  Makefile.in  aacs.c  aacs_server.c  aapl_core.c  avsp.c  avsp_5410.c  dfe.c  diag_core.c  eye.c  eye_math.c  gpio_mdio.c  i2c.c  library.c  logging.c  mdio.c  meas.c  pmd.c  pmro.c  sbm.c  sbus.c  sensor.c  serdes_core.c  spico.c  spico_diag.c  user_code.c
libphy/marvell-88x5113/serdes/src/include/: aacs_server.h  aapl.h  aapl_core.h  aapl_library.h  asic_info.h  avsp.h  diag_core.h  eye.h  eye_math.h  gpio_mdio.h  i2c.h  logging.h  mdio.h  meas.h  mxdSerdes.h  pmd.h  pmro.h  sbm.h  sbus.h  sensor.h  serdes_core.h  serdes_dfe.h  spico.h  system_includes.h
libphy/marvell-88x6141/serdes/src/: Makefile.am  Makefile.example  Makefile.in  aacs.c  aacs_server.c  aapl_core.c  avsp.c  avsp_5410.c  dfe.c  diag_core.c  eye.c  eye_math.c  gpio_mdio.c  i2c.c  library.c  logging.c  mdio.c  meas.c  pmd.c  pmro.c  sbm.c  sbus.c  sensor.c  serdes_core.c  spico.c  spico_diag.c  user_code.c
libphy/marvell-88x6141/serdes/src/include/: aacs_server.h  aapl.h  aapl_core.h  aapl_library.h  asic_info.h  avsp.h  diag_core.h  eye.h  eye_math.h  gpio_mdio.h  i2c.h  logging.h  mdio.h  meas.h  mydSerdes.h  pmd.h  pmro.h  sbm.h  sbus.h  sensor.h  serdes_core.h  serdes_dfe.h  spico.h  system_includes.h
(+951 files in other folders)
